# Flauna

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pnpm-lock.yaml  tacex_ws_schema_v1_0.md
.github/workflows/: gm.yml  schema-sync.yml  web.yml
apps/gm/: .env.example  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
apps/gm/data/: arts.yaml  enemies.yaml  narration_templates.yaml  weapons.yaml
apps/gm/scenarios/: first_mission.yaml
apps/gm/src/tacex_gm/: __init__.py  auth.py  config.py  errors.py  main.py
apps/gm/src/tacex_gm/ai/: __init__.py  anthropic_backend.py  backend.py  mock_backend.py  narration_engine.py  openai_compat.py
apps/gm/src/tacex_gm/api/: rooms.py
apps/gm/src/tacex_gm/engine/: __init__.py  assessment.py  cast_art.py  combat.py  default_actions.py  dice.py  geometry.py  growth.py  npc_evasion.py  pressure.py  scenario_triggers.py  session_builder.py  victory.py
apps/gm/src/tacex_gm/models/: __init__.py  assessment.py  character.py  constants.py  damage.py  event.py  pending.py  pressure.py  scenario.py  skill.py  state.py  turn_action.py  weapon.py
apps/gm/src/tacex_gm/persistence/: __init__.py  db.py  repository.py  schema.py
apps/gm/src/tacex_gm/room/: __init__.py  lock.py  manager.py  session.py
apps/gm/src/tacex_gm/scenario/: __init__.py  loader.py  validator.py
apps/gm/src/tacex_gm/system_module/tactical_exorcist/: arts.py
apps/gm/src/tacex_gm/ws/: __init__.py  backpressure.py  handler.py  idempotency.py  messages.py
apps/gm/tests/: conftest.py
apps/gm/tests/integration/: test_happy_path.py  test_health.py  test_rooms.py  test_websocket.py  test_websocket_edge_cases.py
apps/gm/tests/load/: test_concurrent_sessions.py  test_long_running.py
apps/gm/tests/unit/: test_ai_anthropic_backend.py  test_ai_backend.py  test_auth.py  test_default_actions.py  test_engine_combat.py  test_engine_dice.py  test_engine_geometry.py  test_errors.py  test_idempotency.py  test_messages.py  test_models_character.py  test_models_constants.py  test_models_damage.py  test_models_turn_action.py  test_narration_engine.py  test_phase3_mechanics.py  test_phase4_mechanics.py  test_phase5_mechanics.py  test_phase6_mechanics.py  test_phase7_mechanics.py  test_phase8_mechanics.py  test_room_lock.py  test_scenario_loader.py  test_scenario_validator.py  test_skill.py
apps/gm/tools/: export_schemas.py
apps/web/: .eslintrc.cjs  README.md  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/hooks/: useDeadlineUrgency.ts  useFocusTrap.ts  useOnlineStatus.ts  usePhaseBgm.ts  useReconnectToast.ts  useTurnStartSe.ts
apps/web/src/i18n/: en.ts  index.ts  ja.ts
apps/web/src/routes/: Lobby.tsx  Room.tsx
apps/web/src/services/: api.ts  audio.ts  sessionPersistence.ts  sessionRestore.ts  turnActionResender.ts  (+1 more)
apps/web/tests/: setup.ts
docs/: tacex_gm_spec_v2_5_FINAL.md  tacex_web_spec_v1_1_FINAL.md
(+54 files in other folders)
